# Comp3Dtests

./: .gitignore  CMakeLists.txt  Comp3D_cpp.pro  main.cpp  run_compile-test-package_docker.sh  vcpkg.json  version.cmake
.github/workflows/: build_comp3d.yml  deploy_doc.yml
doc_uni/: compilation.rst
docker/: Dockerfile  README.md  compile_all.sh
gui/: mainwindow.cpp
src/: compile.h  info.h  project.cpp
tests/: CMakeLists.txt
